# ude

./: .gitignore  CMakeLists.txt  README.md  package.xml  pytest.ini  pytest.launch  setup.py
protobuf-definitions/: make.sh
protobuf-definitions/proto/ude/ude_objects/: ude.proto  ude_data_message.proto  ude_empty_message.proto  ude_message.proto  ude_side_channel_message.proto
test/: README.md  test_ude_import.py
test/test_ude/: test_gym_ude.py  test_serialization_context.py
test/test_ude/communication/: test_grpc_auth.py  test_grpc_auth_interceptor.py  test_ude_client.py  test_ude_server.py
test/test_ude/environment/: test_ude_environment.py
test/test_ude/environment/adapters/: test_remote_environment_adapter.py
test/test_ude/side_channels/: test_ude_side_channel.py
test/test_ude/side_channels/adapters/: test_dummy_side_channel.py  (+1 more)
ude/: __init__.py  exception.py  gym_ude.py  serialization_context.py  ude_typing.py
ude/communication/: constants.py  grpc_auth.py  grpc_auth_interceptor.py  ude_client.py  ude_server.py
ude/environment/: constants.py  interfaces.py  ude_environment.py
ude/environment/adapters/: remote_environment_adapter.py
ude/side_channels/: constants.py  ude_side_channel.py
ude/side_channels/adapters/: dummy_side_channel.py  single_side_channel.py
ude/ude_objects/: ude_data_message_pb2.py  ude_data_message_pb2.pyi  ude_empty_message_pb2.py  ude_empty_message_pb2.pyi  ude_message_pb2.py  ude_message_pb2.pyi  ude_pb2.py  ude_pb2_grpc.py  ude_side_channel_message_pb2.py  ude_side_channel_message_pb2.pyi
